# dojo-developpement-paris.github.io

./: .Bank.hs.swo  .Bank.hs.swp  .Diamond.hs.swp  .Main.hs.swo  .RPN.hs.swp  .Specs.hs.swp  .gitignore  Bank.hs  Banking.hs  Baobab.elm  BeginnerProgramDemo.elm  Bonus.hs  Bowling.fsx  BowlingScore.hs  Cargo.toml  Carpaccio.hs  Conway.hs  Diamond.hs  Elo.hs  EloChart.hs  Encodin.hs  Fizzbuzz.hs  Glut.hs  GreetingSpec.hs  Guardfile  Koch.elm  KochTest.elm  Lags_NO.hs  LangtonTest.st  Large.hs  Main.elm  Main.fs  Main.hs  Monads.md  MyTests.elm  Players.txt  PokerHandSpec.hs  Prefix.hs  Program.elm  Pythtree.hs  (+35 more)
2015-01-05/: Specs.hs
2015-01-26/: baobab.py
2015-02-12/: Main.hs  Scrabble.hs
2015-02-20/: expl.txt  index.asm
2015-03-12/: Main.elm  elm-package.json  elm.js
2015-04-02/: roman_to_arabic.rb
2015-04-07/: Calc.hs  index.html
2015-04-16/: .Specs.hs.swp  Specs.hs  index.html
2015-04-23/: Specs.hs
2015-04-28/: .gitignore
2015-05-07/: Gemfile
2015-05-11/: Specs.hs
2015-05-29/: .Specs.hs.swo  .Specs.hs.swp  Specs.hs
2015-06-05/: Specs.hs
2015-06-11/: Specs.hs
2015-06-19/: Specs.hs
2015-07-03/: Specs.hs
2015-07-24/: .Specs.hs.swp  Specs.hs
2015-07-31/: readme.md
2015-08-05/: Calc.hs  Rpn.hs
2015-08-05b/: Specs.hs
2015-08-12/: Bilbo.hs  FizzBuzz.hs  Specs.hs
2015-08-21/: Specs.hs
2015-08-28/: ReadMe.md
2015-09-04/: ShortestPath.hs  Specs.hs
2015-09-18/: README.md
2015-09-23/: README.md
2015-10-02/: README.md
2015-10-09/: Specs.hs
2015-10-15/: README.md
2015-11-05/: Tests.hs
2015-11-12/: GameOfLife.hs  README.md  runPenguins.hs
2015-11-19/: README.md  Specs.hs
2016-01-13/: Specs.hs
2016-01-22-more/: README.md  Specs.hs
2016-01-29/: README.md  Specs.hs
2016-02-19/: sudoku.pl
2016-02-26/: BankOcr.fs  Tests.fs
2016-03-11/: RpnCalc.hs
2016-03-18/: README.md
2016-04-01/: Lags.hs  README.md
2016-04-15/: Lags.hi  README.md
2016-04-22/: Large.hi  Specs.hs  design.txt
2016-04-29/: README.md
2016-05-06/: FizzBuzz.hs  README.md  Specs.hs  Tests.fs
2016-05-20/: Diamond.hs
2016-05-27/: Poker.hs
2016-06-03/: Spike.hs
2016-06-08/: Specs.hs  TableParser.hs
2016-06-16/: CSVParser.hs  README.md  Specs.hs  catalogue.csv
2016-06-24/: pom.xml
2016-07-01/: README.md
2016-07-08/: README.md  RomanNumerals.hs  Specs.hs
2016-07-15/: Elephant  Elephant.hs  Specs.hs
2016-07-22/: README.md
2016-07-29/: Elephant.hs  README.md
2016-08-05/: README.md
2016-08-10/: Carpaccio.hs  README.md  Specs.hs
2016-08-19/: README.md  RomanSpecs.hs  Specs.hs
2016-08-26/: README.md
2016-09-02/: Specs.hs
2016-09-09/: Main.hs  NumberToLCD.hs  README.md
2016-09-23/: <  Specs.hs
2016-09-30/: Specs.hs
2016-10-07/: .gitignore  pom.xml
2016-10-14/: GameOfLife.elm  Main.elm  elm-package.json
2016-10-28/: README.md  Specs.hs
2016-11-04/: Connect4.hs  Specs.hs
2016-11-10/: Connect4.hs
2016-11-25/: Specs.hs
2016-12-09/: Makefile  README.md  actions.awk  profit.awk  rent
2016-12-16/: design.txt  rent
2016-12-23/: README.md  Rent.hs
2017/10/20/: tutorial.cabal
2017/10/20/main/: Main.hs
2017/10/20/test/: Test.hs
2018-03-30/: Elo.hs  (+2 more)
2023/09/06/rpn-python/: .gitignore  flake.nix  pyproject.toml
2023/09/06/rpn-python/src/rpnCalc/: __init__.py
2023/09/06/rpn-python/tests/: test_helloWorld.py
2024/01/05/tic-tac-toe/: .envrc  flake.nix  pyproject.toml
2024/01/05/tic-tac-toe/tests/: test_hello.py
2025/01/27/fraction/: .envrc  README.md  maskfile.md  pyproject.toml
2025/01/27/fraction/src/: hello.py
2025/01/27/fraction/tests/: test_hello.py
2025/12/05/mastermind/: .gitignore  flake.nix  pyproject.toml
2025/12/05/mastermind/.config/git/hooks/: pre-gamble
2025/12/05/mastermind/tests/: test_hello.py
(+2108 files in other folders)
