name:                tutorial
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hx2017#readme
license:             BSD3
license-file:        LICENSE
author:              Ben Clifford
maintainer:          benc@cqx.ltd.uk
copyright:           2017 Ben Clifford
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules: Lib
  hs-source-dirs:      lib
  default-language:    Haskell2010
  build-depends: base >= 4.7 && < 5
               , trifecta

executable check-tutorial
  main-is:             Main.hs
  hs-source-dirs:      main
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , trifecta
                     , tutorial

test-suite tutorial-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  default-language:    Haskell2010
  build-depends:       base
                     , hspec
                     , trifecta
                     , tutorial
  default-language:    Haskell2010

