[tool.poetry]
name = "python_poetry"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "ISC"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.4.1"
pytest = "^7.4.0"
flake8 = "^6.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
extend_skip = [".devbox", "__pycache__", ".pytest_cache"]

[tool.black]
exclude = '''
/(
    .git
    | .venv
    | .direnv
    | .devbox
    | __pycache__
    | .mypy_cache
    | .pytest_cache
)/
'''
